--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
+<!DOCTYPE html>
 <html>
- 
-<body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
- 
+    <head>
+        <title>Challenges Project: Build Your Own cheatsheet</title>
+        <link href="./source/style.css" rel="stylesheet">
+    </head>
+    <body>
+        <main id="main">
+            <h1>Dr. Norman Borlaugh</h1>
+            <p>The man who saved a billion lives</p>
+        </main>
+        <figure id="img-div">
+            <img id="image" src="./source/image/Screenshot 2022-09-22 071654.png" alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of bioligists">
+            <figcaption id="img-caption">
+                
+      Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.
+    
+            </figcaption>
+        </figure>
+        <section id="tribute-info">
+            <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
+            <ul>
+                <li><span>1914</span> - Born in Cresco, Iowa</li>
+                <li><span>1933</span> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
+                <li><span>1935</span> - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me."</li>
+                <li><span>1937</span> - Finishes university and takes a job in the US Forestry Service</li>
+            </ul>
+        </section>
+    </body>
 </html>
